# mouseMacroLibrary

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/QMacroDetector/: TransformerMacroDetector.py  __init__.py  macro_dectector.py
src/macro_detector/: MousePoint.py  TransformerMacroDetector.py  __init__.py  indicators.py  loss_caculation.py  macro_dectector.py  make_gauss.py  make_sequence.py
src/macro_detector/assets/: config.json  scaler.pkl
